module-info.java ustawione , okno MainWindow poczatek