@@ -1,10 +1,9 @@
 package com.severinu;
-
+// --module-path C:\javafx-sdk\lib --add-modules javafx.controls,javafx.fxml,javafx.graphics,javafx.web
 import javafx.application.Application;
 import javafx.fxml.FXMLLoader;
 import javafx.scene.Parent;
 import javafx.scene.Scene;
-import javafx.scene.layout.StackPane;
 import javafx.stage.Stage;
 
 public class Launcher extends Application {
@@ -15,8 +14,7 @@ public class Launcher extends Application {
 
     @Override
     public void start(Stage stage) throws Exception {
-        Parent parent = FXMLLoader.load(getClass().getResource("view/LoginWindow.fxml"));
-
+        Parent parent = FXMLLoader.load(getClass().getResource("view/MainWindow.fxml"));
         Scene scene = new Scene(parent);
         stage.setScene(scene);
         stage.setTitle("JavaFX Email Client");
